--- a/.settings/com.appcelerator.titanium.ios.core.prefs
+++ b/.settings/com.appcelerator.titanium.ios.core.prefs
@@ -3,9 +3,9 @@
 >>>>>>>=f2ed3a9c3883dfe3c463f06e9a4db31f85271797
 eclipse.preferences.version=1
 iosLaunchConfigurationAttributes/ATTR_MINIFY=true
-iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=theone
-iosLaunchConfigurationAttributes/appid=com.astbsl.theoneshop
-iosLaunchConfigurationAttributes/certificate=Man Chun Leung (P52HBUE6D2)
-iosLaunchConfigurationAttributes/keychain=
+iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=websiteTemp
+iosLaunchConfigurationAttributes/appid=com.astbsl.theoneshop1
+iosLaunchConfigurationAttributes/certificate=AST BUSINESS SOLUTIONS LIMITED (785ERC7LFH)
+iosLaunchConfigurationAttributes/keychain=/Users/Roy/Library/Keychains/login.keychain
 iosLaunchConfigurationAttributes/sdk_version=8.1
-iosLaunchConfigurationAttributes/uuid=449475d6-8183-4f02-a85a-376a19625bb9
+iosLaunchConfigurationAttributes/uuid=f591d57a-9052-44ca-8670-5b52bf21a2f0
