--- a/.settings/com.appcelerator.titanium.android.core.prefs
+++ b/.settings/com.appcelerator.titanium.android.core.prefs
@@ -1,18 +1,20 @@
+android/ATTR_MINIFY=true
+android/ATTR_MINIFY.type=Boolean
 android/ATTR_PROJECT_NAME=websiteTemp
 android/ATTR_PROJECT_NAME.type=String
 android/abi=x86
 android/abi.type=String
-android/distribute_path=
+android/distribute_path=/Users/Roy/Documents/Titanium_Studio_Workspace/websiteTemp
 android/distribute_path.type=String
-android/key_password=
+android/key_password=theoneshop
 android/key_password.type=String
-android/keystore_alias=
+android/keystore_alias=theoneshop
 android/keystore_alias.type=String
-android/keystore_password=
+android/keystore_password=theoneshop
 android/keystore_password.type=String
-android/keystore_path=
+android/keystore_path=/Users/Roy/Documents/Titanium_Studio_Workspace/theone.keystore
 android/keystore_path.type=String
-android/recent_output=
+android/recent_output=/Users/Roy/Documents/Titanium_Studio_Workspace/websiteTemp
 android/recent_output.type=String
 android/sdk_version=2.3.3
 android/sdk_version.type=String
